Page: Contact - in progress
- fixed person-circle-card element
- added resume section - in progress

--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
@@ -12,7 +12,9 @@
 @import "templates-design-parts/element-person-circle-card.scss";
 @import "templates-design-parts/element-theme-switcher.scss";
 
+@import "templates-design-parts/section-debug.scss";
 @import "templates-design-parts/section-contact-data.scss";
+@import "templates-design-parts/section-resume-data.scss";
 @import "templates-design-parts/section-about.scss";
 @import "templates-design-parts/section-portfolio-categories.scss";
 @import "templates-design-parts/section-web-development-experience.scss";
