--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/interface-design/variables.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/interface-design/variables.scss
@@ -3,39 +3,46 @@
 
 :root {
     /* ---- Colors ---- */
-    --dm-color-primary                  : #5d6977;
-    --dm-color-secondary                : #1b2431;
-    --dm-link-color                     : var( --dm-color-primary );
-    --dm-color-highlight-primary        : #FFD057;
-    --dm-color-highlight-secondary      : #FFF2D1;
+    --dm-color-primary                      : #5d6977;
+    --dm-color-secondary                    : #1b2431;
+    --dm-link-color                         : var( --dm-color-primary );
+    --dm-color-highlight-primary            : #FFD057;
+    --dm-color-highlight-secondary          : #FFF2D1;
+    --dm-color-status-primary               : #399017;
+    --dm-color-status-secondary             : #eaaa07;
+    --dm-color-status-tertiary              : #b23620;
+
 
     /* ---- Non-Colors ---- */
-    --dm-color-black                    : #000000;
-    --dm-color-white                    : #FFFFFF;
-    --dm-color-gray                     : #222222;
-    --dm-color-gray-darken              : #141414;
+    --dm-color-black                        : #000000;
+    --dm-color-white                        : #FFFFFF;
+    --dm-color-gray                         : #222222;
+    --dm-color-gray-darken                  : #141414;
 
     /* ---- Colors RGB---- */
-    --dm-color-primary-rgb              : #{hexToRGB( #5d6977 )};
-    --dm-color-secondary-rgb            : #{hexToRGB( #1b2431 )};
-    --dm-color-highlight-primary-rgb    : #{hexToRGB( #FFD057 )};
-    --dm-color-highlight-secondary-rgb  : #{hexToRGB( #FFF2D1 )};
+    --dm-color-primary-rgb                  : #{hexToRGB( #5d6977 )};
+    --dm-color-secondary-rgb                : #{hexToRGB( #1b2431 )};
+    --dm-color-highlight-primary-rgb        : #{hexToRGB( #FFD057 )};
+    --dm-color-highlight-secondary-rgb      : #{hexToRGB( #FFF2D1 )};
 
     /* ---- Non-Colors RGB ---- */
-    --dm-color-black-rgb               : #{hexToRGB( #000000 )};
-    --dm-color-white-rgb               : #{hexToRGB( #FFFFFF )};
-    --dm-color-gray-rgb                : #{hexToRGB( #4A4B44 )};
-    --dm-color-gray-darken             : #{hexToRGB( #141414 )};;
+    --dm-color-black-rgb                   : #{hexToRGB( #000000 )};
+    --dm-color-white-rgb                   : #{hexToRGB( #FFFFFF )};
+    --dm-color-gray-rgb                    : #{hexToRGB( #4A4B44 )};
+    --dm-color-gray-darken                 : #{hexToRGB( #141414 )};;
 
     /* ---- Backgrounds ---- */
-    --dm-background-color-primary      : var( --dm-color-primary );
-    --dm-background-color-secondary    : var( --dm-color-secondary );
+    --dm-background-color-primary          : var( --dm-color-primary );
+    --dm-background-color-secondary        : var( --dm-color-secondary );
+    --dm-background-color-status-primary   : #a9bea3;
+    --dm-background-color-status-secondary : #ebe46f;
+    --dm-background-color-status-tertiary  : #dd966f;
 
     /* ---- Backgrounds Non-Colors ---- */
-    --dm-background-color-black        : #000000;
-    --dm-background-color-white        : #FFFFFF;
-    --dm-background-color-gray         : #4A4B44;
-    --dm-background-color-gray-darken  : #141414;
+    --dm-background-color-black            : #000000;
+    --dm-background-color-white            : #FFFFFF;
+    --dm-background-color-gray             : #4A4B44;
+    --dm-background-color-gray-darken      : #141414;
 
     /* ---- Border Radius ---- */
     --dm-border-radius-primary   : 6px;
