--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/style.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/style.scss
@@ -2,13 +2,14 @@
   * @author Denis Marginas
 **/
 
-@import "../scss/interface-design/fonts.scss";
-@import "../scss/interface-design/variables.scss";
-@import "../scss/interface-design/text-elements.scss";
+@import "interface-design/fonts.scss";
+@import "interface-design/variables.scss";
+@import "interface-design/elements-text.scss";
+@import "interface-design/elements.-buttons.scss";
 
-@import "../scss/templates-design/templates-design.scss";
+@import "templates-design/templates-design.scss";
 
-@import "../scss/structure-design/header.scss";
-@import "../scss/structure-design/body.scss";
-@import "../scss/structure-design/footer.scss";
+@import "structure-design/header.scss";
+@import "structure-design/body.scss";
+@import "structure-design/footer.scss";
 
