--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/element-person-circle-card.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/element-person-circle-card.scss
@@ -5,7 +5,8 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  width: 280px;
+  width: 100%;
+  max-width: 280px;
 
   > span {
     border-radius: 50%;
@@ -65,6 +66,80 @@
         height: auto;
       }
     }
+  }
+  @container (max-width: 295px) {
+    > span {
+      height: 70vw;
+      width: 100vw;
+
+      > div {
+        top: -10vw;
+        height: 100vw;
+        width: 100%;
+        max-width: 100vw;
+        clip-path: none;
+        overflow: hidden;
+        position: relative;
+        border-radius: 100%;
+
+        > .circle-background {
+          @include fix-size(100vw);
+          top: 0;
+          left: 0;
+          width: 80vw;
+          height: 42vw;
+        }
+        > img {
+          @include fix-width(60vw);
+          @include fix-height(auto);
+          top: -5vw;
+          left: 20vw;
+        }
+      }
+      &:after {
+        width: 100vw;
+        height: 100vw;
+        top: 1vw;
+        left: 3vw;
+      }
+    }
+  }
+  @media only screen and (max-width: $screen-phone-small ) {
+      > span {
+        height: 70vw;
+        width: 100vw;
+
+        > div {
+          top: -10vw;
+          height: 100vw;
+          width: 100%;
+          max-width: 100vw;
+          clip-path: none;
+          overflow: hidden;
+          position: relative;
+          border-radius: 100%;
+
+          > .circle-background {
+            @include fix-size(100vw);
+            top: 0;
+            left: 0;
+            width: 80vw;
+            height: 42vw;
+          }
+          > img {
+            @include fix-width(60vw);
+            @include fix-height(auto);
+            top: -5vw;
+            left: 20vw;
+          }
+        }
+        &:after {
+          width: 100vw;
+          height: 100vw;
+          top: 1vw;
+          left: 3vw;
+        }
+      }
   }
 }
 
