--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/element-person-circle-card.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/element-person-circle-card.scss
@@ -105,6 +105,8 @@
     }
   }
   @media only screen and (max-width: $screen-phone-small ) {
+    max-width: 112px;
+
       > span {
         height: 70vw;
         width: 100vw;
