--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-contact-data.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-contact-data.scss
@@ -12,6 +12,7 @@
       align-items: center;
       grid-template-columns: 1fr 3fr;
       gap: var( --dm-spacing-secondary );
+      padding-bottom: var( --dm-spacing-large );
 
       > li {
         > h2 {
@@ -61,6 +62,7 @@
             > span {
               b {
                 font-weight: 600;
+                transition: color 0.2s;
               }
               > span:hover{
                 cursor: pointer;
@@ -108,7 +110,7 @@
       position: absolute;
       content: "";
       width: 50vw;
-      height: 100vh;
+      height: 118vh;
       background-color: rgba( var( --dm-color-primary-rgb ) , 0.5 );
       z-index: -1;
       right: -20vw;
@@ -119,12 +121,19 @@
       position: absolute;
       content: "";
       width: 50vw;
-      height: 100vh;
+      height: 118vh;
       background-color: rgba( var( --dm-color-primary-rgb ) , 0.5 );
       z-index: -1;
       left: -40vw;
       top: 0;
       transform: rotate(-50deg);
+    }
+  }
+  @media only screen and (max-width: $screen-tablet-large) {
+    > container {
+      > ul {
+        padding: 0;
+      }
     }
   }
   @media only screen and (max-width: $screen-tablet-medium) {
@@ -143,6 +152,13 @@
       }
       &:before {
         display: none;
+      }
+    }
+  }
+  @media only screen and (max-width: $screen-tablet-small) {
+    > container {
+      > ul {
+        padding: var( --dm-spacing-tertiary ) 0;
       }
     }
   }
@@ -181,7 +197,7 @@ body, body.theme-light {
               }
               > span {
                 > b {
-                  --dm-text-medium-color: var( --dm-color-secondary );
+                  --dm-text-medium-color: var( --dm-color-primary );
                 }
                 > a:hover {
                   --dm-text-medium-color: var( --dm-color-primary );
@@ -226,7 +242,7 @@ body.theme-dark {
               }
               > span {
                 > b {
-                  --dm-text-medium-color: var( --dm-color-primary );
+                  --dm-text-medium-color: var( --dm-color-white );
                 }
                 > a:hover {
                   --dm-text-medium-color: var( --dm-color-primary );
