--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-debug.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-debug.scss
@@ -23,7 +23,8 @@
     display: none;
     $log-color-primary: #2b2b2b;
     background-color: $log-color-primary;
-    position: absolute;
+    position: fixed;
+    height: 100vh;
     z-index: 999;
     padding: var( --dm-spacing-tertiary );
     top: 0;
