--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
@@ -8,12 +8,15 @@
 @import "templates-design-parts/animation-grid-background.scss";
 @import "templates-design-parts/animation-blurred-lines.scss";
 
+@import "templates-design-parts/element-contact-form";
 @import "templates-design-parts/element-category-card.scss";
+@import "templates-design-parts/element-resume-card.scss";
 @import "templates-design-parts/element-person-circle-card.scss";
 @import "templates-design-parts/element-theme-switcher.scss";
 
 @import "templates-design-parts/section-debug.scss";
 @import "templates-design-parts/section-contact-data.scss";
+@import "templates-design-parts/section-contact-details.scss";
 @import "templates-design-parts/section-resume-data.scss";
 @import "templates-design-parts/section-about.scss";
 @import "templates-design-parts/section-portfolio-categories.scss";
