--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
@@ -10,16 +10,20 @@
 
 @import "templates-design-parts/element-contact-form";
 @import "templates-design-parts/element-category-card.scss";
+@import "templates-design-parts/element-category-experience-card.scss";
 @import "templates-design-parts/element-resume-card.scss";
 @import "templates-design-parts/element-person-circle-card.scss";
 @import "templates-design-parts/element-theme-switcher.scss";
+@import "templates-design-parts/element-video-container.scss";
 
 @import "templates-design-parts/section-debug.scss";
 @import "templates-design-parts/section-contact-data.scss";
 @import "templates-design-parts/section-contact-details.scss";
 @import "templates-design-parts/section-resume-data.scss";
+@import "templates-design-parts/section-experience-categories.scss";
 @import "templates-design-parts/section-about.scss";
 @import "templates-design-parts/section-portfolio-categories.scss";
+@import "templates-design-parts/section-portfolio-showcase.scss";
 @import "templates-design-parts/section-web-development-experience.scss";
 @import "templates-design-parts/section-web-development-description.scss";
 
