--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
@@ -15,6 +15,7 @@
 @import "templates-design-parts/element-person-circle-card.scss";
 @import "templates-design-parts/element-theme-switcher.scss";
 @import "templates-design-parts/element-video-container.scss";
+@import "templates-design-parts/element-knowledge-list-icons.scss";
 
 @import "templates-design-parts/section-debug.scss";
 @import "templates-design-parts/section-contact-data.scss";
