--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-summary-experience.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-summary-experience.scss
@@ -2,24 +2,55 @@
 @import "../../functions/functions.scss";
 
 .dm-summary-experience {
-  > container {
     .dm-experience-header {
       @include padding-x();
       overflow: hidden;
       background-color: var( --dm-color-primary );
-    }
-    .dm-experience-section {
-      @include padding-x();
-      overflow: hidden;
+      padding: var( --dm-spacing-secondary ) var( --dm-spacing-primary );
 
-      > ul {
-        @include reset-list();
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-        gap: var( --dm-spacing-small );
+      > h2 {
+        @include dm-font-heading1();
+        --dm-text-heading1-color: var( --dm-color-white );
+        text-align: center;
+        word-break: break-all;
+        text-transform: uppercase;
       }
     }
-  }
+    .dm-experience-section {
+      position: relative;
+      overflow: hidden;
+      @include padding-x();
+
+      > container {
+        > ul {
+          @include reset-list();
+          display: grid;
+          padding: var( --dm-spacing-secondary ) 0;
+          gap: var( --dm-spacing-small );
+
+          &:nth-child(n) {
+            grid-template-columns: 2fr 1fr;
+          }
+          &:nth-child(2n) {
+            grid-template-columns: 1fr 2fr ;
+          }
+          > li {
+            @include flex-column();
+            gap: var( --dm-spacing-secondary );
+
+            > h3 {
+              @include dm-font-heading4();
+              word-break: break-all;
+              text-transform: uppercase;
+            }
+            > p {
+              @include dm-font-medium();
+              word-break: break-all;
+            }
+          }
+        }
+      }
+    }
 }
 
 body, body.theme-light {
