Search Tool - In progres

--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/interface-design/fonts.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/interface-design/fonts.scss
@@ -1,8 +1,9 @@
+/* Roboto Regular */
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: normal;
-    src: url('../fonts/Roboto/robotoregular.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/Roboto/robotoregular.ttf'); /* IE9 Compat Modes */
     font-display: swap;
     src: local(''),
          url('../fonts/Roboto/robotoregular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
