--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
@@ -26,9 +26,11 @@
 @import "templates-design-parts/element-post-media-gallery.scss";
 @import "templates-design-parts/element-post-media-videos.scss";
 @import "templates-design-parts/element-slider.scss";
+@import "templates-design-parts/element-carousel-posts-list.scss";
 
 @import "templates-design-parts/section-post.scss";
 @import "templates-design-parts/section-posts-list.scss";
+@import "templates-design-parts/section-carousel-posts-list.scss";
 @import "templates-design-parts/section-debug.scss";
 @import "templates-design-parts/section-contact-data.scss";
 @import "templates-design-parts/section-contact-details.scss";
