--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-summary-experience.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-summary-experience.scss
@@ -74,6 +74,18 @@
               width: 100%;
               height: auto; 
               max-width: 100%;
+
+              > .thumbnail {
+            
+                > img {
+                  margin: auto;
+                  width: auto;
+                  height: auto;
+                  max-width: 50%;
+                  max-height: 50%;
+                  display: block;
+                }
+              }
             }
 
             > ul.list-img-flex {
