--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-category-experience-card.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-category-experience-card.scss
@@ -4,6 +4,7 @@
 .dm-experience-category {
   width: 100%;
   container-type: inline-size;
+  overflow: hidden;
 
   > div {
     background-color: var( --dm-color-primary );
