--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-about.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-about.scss
@@ -126,7 +126,29 @@
     }
     @media only screen and (max-width: $screen-desktop-medium) {
       > container {
-        gap: var( --dm-spacing-tertiary);
+        gap: var(--dm-spacing-tertiary);
+
+        > div {
+          &:first-of-type {
+            width: 35%;
+          }
+          &:last-of-type {
+            width: 65%;
+          }
+        }
+      }
+    }
+    @media only screen and (max-width: $screen-desktop-small) {
+      > container {
+        align-items: start;
+        > div {
+          &:first-of-type {
+            width: 30%;
+          }
+          &:last-of-type {
+            width: 70%;
+          }
+        }
       }
     }
     @media only screen and (max-width: $screen-tablet-large) {
