--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-experience-categories.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-experience-categories.scss
@@ -2,61 +2,24 @@
 @import "../../functions/functions.scss";
 
 .dm-experience-categories {
-  @include padding-x();
-  overflow: hidden;
-  background-color: var( --dm-color-highlight-primary );
-  background: radial-gradient(var(--dm-color-highlight-secondary),var(--dm-color-highlight-primary));
+  @include reset-list();
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  align-items: start;
+  gap: var( --dm-spacing-secondary );
+  padding: var( --dm-spacing-small ) 0;
 
-  > container {
-    z-index: 1;
+  @media only screen and (max-width: $screen-desktop-small) {
+    grid-template-columns: repeat(2, 1fr);
+    gap: var( --dm-spacing-primary );
+  }
 
-    > ul {
-      @include reset-list();
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      align-items: start;
-      gap: var( --dm-spacing-small );
-      padding: var( --dm-spacing-small ) 0;
-    }
-  }
-  @media only screen and (max-width: $screen-desktop-medium) {
-    > container {
-      > ul {
-        gap: var( --dm-spacing-secondary );
-      }
-    }
-  }
   @media only screen and (max-width: $screen-tablet-large) {
-    > container {
-      > ul {
-        grid-template-columns: repeat(2, 1fr);
-        gap: var( --dm-spacing-secondary );
-      }
-    }
+    grid-template-columns: repeat(2, 1fr);
+    gap: var( --dm-spacing-primary );
   }
+
   @media only screen and (max-width: $screen-phone-medium) {
-    > container {
-      > ul {
-        grid-template-columns: repeat(1, 1fr);
-      }
-    }
-  }
-
-}
-
-body, body.theme-light {
-  .dm-experience-categories {
-    > container {
-      > ul {
-
-      }
-    }
-  }
-}
-body.theme-dark {
-  .dm-experience-categories {
-    > container {
-
-    }
+    grid-template-columns: repeat(1, 1fr);
   }
 }
