--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-portfolio-showcase.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-portfolio-showcase.scss
@@ -144,6 +144,7 @@
           overflow: hidden;
           width: 100%;
           max-width: 100%;
+          box-shadow: 3px 6px 7px rgba(11, 11, 11, 0.2);
         }
       }
     }
