--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-education.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-education.scss
@@ -7,7 +7,7 @@
 
   > container {
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     gap: var( --dm-spacing-large );
 
     > .compact-list {
@@ -120,6 +120,7 @@
           flex-direction: column;
           gap: var( --dm-spacing-primary );
           z-index: 1;
+          width: 100%;
 
           > .head {
             @include flex-row();
