--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-cookie-notice.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-cookie-notice.scss
@@ -43,6 +43,14 @@ body[java-script="true"] {
         width: auto;
         max-width: 100%;
         margin: 0px;
+        transform: rotate(0deg);
+        transition: all 0.3s ease-in-out;
+      }
+      &:hover {
+        > svg {
+          transform: rotate(30deg);
+          transition: all 0.3s ease-in-out;
+        }
       }
     }
   }
@@ -51,7 +59,7 @@ body, body.theme-light {
   .cookie-notice {
     border: 1px solid rgba(var(--dm-color-gray-rgb), 0.2);
     background-color: var( --dm-background-color-white );
- 
+
     > .text {
       --dm-text-medium-color: var( --dm-color-gray-darken );
 
