--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-post.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-post.scss
@@ -117,6 +117,8 @@
               > svg {
                 @include svg-color(var( --post_color_secondary ));
                 @include fix-size(16px);
+                transform: rotate(0deg);
+                transition: all 0.3s ease-in-out;
               }
 
               > span {
@@ -151,7 +153,10 @@
             @include limit-line-text(1);
             --dm-text-default-color: var( --dm-color-white );
             background-color: var( --dm-color-gray-lighten );
-            background: linear-gradient(rgba(var(--dm-color-gray-lighten-rgb), 1), rgba(var(--dm-color-gray-rgb), 1));
+            background: linear-gradient(
+                            rgba(var(--dm-color-gray-lighten-rgb), 1),
+                            rgba(var(--dm-color-gray-rgb), 1)
+            );
             padding: 2px calc(var( --dm-spacing-primary ) / 2) 2px 12px;
             margin-left: -4px;
             width: 100%;
@@ -164,6 +169,14 @@
               color: var( --dm-color-white );
               box-shadow: inset 2px -9px 18px rgba(var( --dm-color-gray-darken-rgb ), 0.2);
               transition: all 0.3s ease-in-out;
+            }
+          }
+          &:hover {
+            > span {
+              > svg {
+                transform: rotate(360deg);
+                transition: all 0.3s ease-in-out;
+              }
             }
           }
         }
