--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-carousel-posts-list.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-carousel-posts-list.scss
@@ -11,22 +11,31 @@
   gap: var(--dm-spacing-tertiary);
 
   > .carousel-item {
-    > .dm-post-item-logo {
+    > .dm-post-item-image {
       --carousel-item-size: 200px;
       @include flex-center();
       @include fix-width( var( --carousel-item-size ) );
-      padding: var(--dm-spacing-secondary);
+      overflow: hidden;
       border-radius: var(--dm-border-radius-primary);
       background-color: rgba(var(--dm-color-gray-rgb),0.1);
-      height: 120px;
+      height: 120px; 
 
-      > img {
+      > .logo, > svg {
+        @include svg-color( var( --dm-color-white ) );
+        padding: var(--dm-spacing-secondary);
+
         &:nth-child(1) {
           width: auto;
-          max-width: 80%;
+          max-width: 70%;
           height: auto;
-          max-height: 70%;
+          max-height: 60%;
         }
+      }
+      > .thumbnail {
+        width: 100%;
+        height: 100%;
+        object-position: center;
+        object-fit: cover;
       }
     }
   }
@@ -34,8 +43,8 @@
     gap: var( --dm-spacing-secondary );
 
     > .carousel-item {
-      > .dm-post-item-logo {
-        height: 80px;
+      > .dm-post-item-image {
+        height: 100px;
       }
     }
   }
@@ -43,7 +52,7 @@
     gap: var( --dm-spacing-secondary );
 
     > .carousel-item {
-      > .dm-post-item-logo {
+      > .dm-post-item-image {
         @include fix-width(100px);
         height: 60px;
       }
@@ -54,7 +63,7 @@
 body, body.theme-light {
   .carousel-list {
     > .carousel-item {
-      > .dm-post-item-logo {
+      > .dm-post-item-image {
         border: 1px solid rgba(var(--dm-color-gray-lighten-rgb),0.4);
       }
     }
@@ -63,7 +72,7 @@ body, body.theme-light {
 body.theme-dark {
   .carousel-list {
     > .carousel-item {
-      > .dm-post-item-logo {
+      > .dm-post-item-image {
         border: 1px solid rgba(var(--dm-color-white-rgb),0.4);
       }
     }
